# file-content-rs

./: Cargo.toml  README.md  SUPPORT.md
.github/workflows/: cargo_publish.yml  rust_build.yml
examples/: read_file.rs
src/: constants.rs  encoding.rs  file.rs  lib.rs  text_data.rs  utf16.rs
tests/: file_content_tests.rs  file_tests.rs
tests/data/Binary/: binary
tests/data/UTF16BE/: ascii  unicode
tests/data/UTF16LE/: unicode
tests/data/UTF8/: unicode
tests/data/UTF8BOM/: unicode
