[package]
name = "file-content"
version = "0.1.0"
authors = ["Microsoft Corporation"]
edition = "2021"
description = "A library for working with files and common text data encodings."
license = "MIT"
repository = "https://github.com/microsoft/file-content-rs"
readme = "README.md"
keywords = ["encodings", "utf8", "utf16", "unicode", "BOM", "file-content"]
categories = ["encoding", "filesystem"]

[dependencies]
thiserror = "1.0.57"

[dev-dependencies]
anyhow = "1.0.81"
test-case = "3.3.1"
